opam-version: "2.0"
name: "morph_session"
version: "0.0.1"
synopsis: "Easy to use session middleware for morph http server"
description: "Easy to use session middleware for morph http server"
maintainer: "Shawn McGinty <mcginty.shawn@gmail.com>"
authors: [ "Shawn McGinty <mcginty.shawn@gmail.com>" ]
license: "MIT"
homepage: "https://github.com/shawn-mcginty/morph-session"
bug-reports: "https://github.com/shawn-mcginty/morph-session/issues"
dev-repo: "git+https://github.com/shawn-mcginty/morph-session.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "reason" {>= "3.4.0"}
  "lwt" {>= "4.2.1"}
  "morph"
  "morph_core"
  "nocrypto"
  "cstruct"
]
